<resources>
    <string name="app_name">Meeting</string>
    <string name="action_settings">Settings</string>
    <string name="sing_out">Sing out</string>
    <string name="noSD">Нет доступа к карте памяти!</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="middle_name">Middle name</string>
    <string name="loginI">Login*</string>
    <string name="passwordI">Password*</string>
    <string name="necessarily">*necessarily</string>
    <string name="post">Post</string>
    <string name="update_meeting_list">Update meeting list</string>
    <string name="meeting">Meeting</string>
    <string name="priority">Priority:</string>
    <string name="i_am_participate">I am participate</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="date_start">Date start:</string>
    <string name="date_end">Date end:</string>
    <string name="participants">Participants:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="play">Play</string>
    <string name="add_record">Add record</string>
    <string name="attachment">Attachment:</string>
    <string name="create">Create</string>
    <string name="delete_record">Delete</string>
    <string name="search_meetings">Search meetings</string>
    <string name="user">User:</string>

    <string-array name="prioritylist">
        <item>Urgent</item>
        <item>Planned</item>
        <item>Possible</item>
    </string-array>

</resources>
