<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"/>

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"/>

    <EditText
        android:id="@+id/edit_middle_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/middle_name"/>

    <EditText
        android:id="@+id/edit_post"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/post"/>

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/loginI"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/passwordI"/>

    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/necessarily"/>

</LinearLayout>