<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@android:drawable/ic_menu_edit"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>

</LinearLayout>