<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:gravity="center">

            <TextView
                android:layout_margin="15dp"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meeting"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/name"/>

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingBottom="10dp"
                    android:text=""/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/description"/>

                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingBottom="10dp"
                    android:text=""/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/date_start"/>

                <DatePicker
                    android:id="@+id/picker_date_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingBottom="10dp"
                    android:calendarViewShown="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/date_end"/>

                <DatePicker
                    android:id="@+id/picker_date_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingBottom="10dp"
                    android:calendarViewShown="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/priority"/>

                <Spinner
                    android:id="@+id/spinner_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingBottom="10dp"
                    android:entries="@array/prioritylist"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:textColor="@android:color/black"
                        android:text="@string/attachment"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:paddingRight="20dp"
                        android:src="@mipmap/ic_music"/>

                    <TextView
                        android:id="@+id/text_music"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:textColor="@android:color/black"
                        android:text=""/>

                    <Button
                        android:id="@+id/button_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/play"
                        android:textSize="20sp"
                        android:textColor="@color/colorAccent"
                        android:background="@android:color/background_light"
                        android:onClick="onClickPlay"/>

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent"
                        android:layout_marginRight="10dp"/>

                    <Button
                        android:id="@+id/button_add_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_record"
                        android:textSize="20sp"
                        android:textColor="@color/colorAccent"
                        android:background="@android:color/background_light"
                        android:onClick="onClickAddAttach"/>

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <Button
                        android:id="@+id/button_delete_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_record"
                        android:textSize="20sp"
                        android:textColor="@color/colorAccent"
                        android:background="@android:color/background_light"
                        android:onClick="onClickDeleteAttach"/>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_create"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/create"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:onClick="onClickCreate"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"/>

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:onClick="onClickCancel"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>